# lib/api-spec/openapi.yaml
@@ -929,6 +929,10 @@ components:
           type: string
         totalValue:
           type: ["number", "null"]
+        skippedSteps:
+          type: array
+          items:
+            type: integer
 
     Transaction:
       type: object
@@ -948,6 +952,10 @@ components:
           type: ["string", "null"]
         totalValue:
           type: ["number", "null"]
+        skippedSteps:
+          type: array
+          items:
+            type: integer
         documents:
           type: array
           items:
